--- a/index.html
+++ b/index.html
@@ -10,8 +10,33 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <header id="header-container">
+      <div class="container">
+        <div class="row fila">
+          <div class="col-9 columna">
+            Hola
+          </div>
+          <!-- al sobrepasar las 12 columnas boostrap desplaza la columna hacia otra linea -->
+          <div class="col-5 columna">
+            Mundo
+          </div>
+        </div>
+        <div class="row fila">
+          <div class="col-5 columna">hola</div>
+          <!-- el offset desplaza la columna x espacios hacia la derecha -->
+          <!-- si se sobrepasa de las 12 columnas se desplaza una linea debajo -->
+          <div class="col-5 offset-2 columna">mundo</div>
+        </div>
+        <!-- para ordenar se utiliza la clase push- y pull- -->
+        <!-- push- corre x posiciones hacia adelante-->
+        <!-- pull- corre x posiciones hacia atras -->
+        <div class="row fila">
+          <div class="col-5 push-7 columna">hola</div>
+          <div class="col-5 pull-5 columna">mundo</div>
+          <div class="col-2 pull-5 columna">:)</div>  
+        </div>
+      </div>
+    </header>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
