--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <!-- medidas
+        extra small no tiene prefijo y su tamaño es < 576
+        sm >= 576
+        md >= 768
+        lg >= 992
+        xl >= 1200 -->
+    <header id="header-container">
+      <div class="container">
+        <!-- con la clase align-items-(start,end,center,baseline,stretch)
+            se pueden alinear los elementos verticalmente -->
+        <!-- para alinear horizontalmente se utiliza la clase justify-content-(start,end,center,between,around) -->
+        <div class="row d-flex justify-content-between align-items-center">
+          <div class="col-3 columna">
+            <h1>Platzishop</h1>
+          </div>
+          <div class="col-3 columna text-right text-md-center text-lg-left">
+            <a href="">Login</a>
+          </div>
+        </div>
+      </div>
+    </header>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
