se justifico la barra

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- clase container esta clase crea un div centrado alineado con padding a la izquierda y derecha -->
         <!-- clase container-fluid esta clase cre un div que ocupa todo el ancho de la pagina -->
         <div class="container">
-            <div class="row d-flex align-items-center justiy-content-between">
+            <div class="row d-flex justify-content-between align-items-center">
                 <div class="col-3">
                     <h1>Platzishop</h1> 
                 </div>
