--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
@@ -21,7 +22,10 @@
                     <h1>Platzishop</h1> 
                 </div>
                 <div class="col-3 text-right">
-                    <a href="">login</a>
+                    <button class="navbar-toggler hidden-sm-up" data-toggle="collapse" data-target="#navMenu">
+                        &#9776;
+                    </button>
+                    <a class="login hidden-sm-down text-uppercase font-weight-bold" href="#">login</a>
                 </div>
             </div>
         </div>
@@ -29,37 +33,70 @@
     <!-- /Header -->
 
     <!-- Menu -->
-    <nav id="menu-container" class="navbar navbar-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-10 offset-1 col-md-4 offset-md-0">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link active">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Catálogo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Carrito</a>
-                        </li>
-                    </ul>
+    <div id="menu-container">
+        <nav class="navbar navbar-toggleable navbar-light bg-faded">
+            <div class="container">
+                <div class="row">
+                    <div class="collapse navbar-collapse" id="navMenu">
+                    <div class="col-10 offset-1 col-md-4 offset-md-0">
+                            <ul class="navbar-nav">
+                                <li class="nav-item text-center">
+                                    <a href="#" class="nav-link active">Home</a>
+                                </li>
+                                <li class="nav-item text-center">
+                                    <a href="#" class="nav-link">Catálogo</a>
+                                </li>
+                                <li class="nav-item text-center">
+                                    <a href="#" class="nav-link">Carrito</a>
+                                </li>
+                                <li class="nav-item text-center hidden-sm-up">
+                                    <a href="#" class="nav-link">Login</a>
+                                </li>
+                            </ul>
+                    </div>
+                    <div class="col-12 col-md-6 offset-md-2 hidden-xs-down">
+                        <form action="">
+                            <div class="input-group">
+                                <form action="" class="form-inline">
+                                    <input type="text" class="form-control" placeholder="¿Encontraste lo que buscabas?">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-platzi" type="button">
+                                            <!-- la clase hidden-sm-down lo oculta desde small hasta extra small  -->
+                                            <span class="hidden-sm-down">Buscar</span>
+                                            <!-- la clase hidden-md-up lo oculta desde tamaño mediano hasta extra largo -->
+                                            <i class="fa fa-search hidden-md-up"></i>
+                                        </button>
+                                    </span>
+                                </form>
+                            </div>
+                        </form>
+                    </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 offset-md-2">
+            </div>
+        </nav>
+        <div id="search-bar" class="container hidden-sm-up">
+            <div class="row">
+                <div class="col">
                     <form action="">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="¿Encontraste lo que buscabas?">
-                            <span class="input-group-btn">
-                                <button class="btn btn-platzi" type="button">Buscar</button>
-                            </span>
+                            <form action="" class="form-inline">
+                                <input type="text" class="form-control" placeholder="¿Encontraste lo que buscabas?">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-platzi" type="button">
+                                        <!-- la clase hidden-md-up lo oculta desde tamaño mediano hasta extra largo -->
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
+                            </form>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </nav>
+    </div>
     <!-- /Menu -->
-    
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
