--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <button class="navbar-toggler hidden-sm-up" data-toggle="collapse" data-target="#navMenu">
                         &#9776;
                     </button>
-                    <a class="login hidden-sm-down text-uppercase font-weight-bold" href="#">login</a>
+                    <a class="login hidden-sm-down text-uppercase font-weight-bold" href="#">Login</a>
                 </div>
             </div>
         </div>
@@ -35,10 +35,10 @@
     <!-- Menu -->
     <div id="menu-container">
         <nav class="navbar navbar-toggleable navbar-light bg-faded">
-            <div class="container">
-                <div class="row">
-                    <div class="collapse navbar-collapse" id="navMenu">
-                    <div class="col-10 offset-1 col-md-4 offset-md-0">
+            <div class="navbar-collapse collapse" id="navMenu">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-md-4 offset-md-0">
                             <ul class="navbar-nav">
                                 <li class="nav-item text-center">
                                     <a href="#" class="nav-link active">Home</a>
@@ -53,11 +53,10 @@
                                     <a href="#" class="nav-link">Login</a>
                                 </li>
                             </ul>
-                    </div>
-                    <div class="col-12 col-md-6 offset-md-2 hidden-xs-down">
-                        <form action="">
-                            <div class="input-group">
-                                <form action="" class="form-inline">
+                        </div>
+                        <div class="col-12 col-md-6 offset-md-2">
+                            <form action="" class="form-inline d-inline w-100 hidden-sm-down">
+                                <div class="input-group">
                                     <input type="text" class="form-control" placeholder="¿Encontraste lo que buscabas?">
                                     <span class="input-group-btn">
                                         <button class="btn btn-platzi" type="button">
@@ -67,17 +66,16 @@
                                             <i class="fa fa-search hidden-md-up"></i>
                                         </button>
                                     </span>
-                                </form>
-                            </div>
-                        </form>
-                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </nav>
-        <div id="search-bar" class="container hidden-sm-up">
+        <div id="search-bar" class="container hidden-md-up">
             <div class="row">
-                <div class="col">
+                <div class="col-xs-12 col-md-12">
                     <form action="">
                         <div class="input-group">
                             <form action="" class="form-inline">
