--- a/index.html
+++ b/index.html
@@ -95,6 +95,49 @@
     </div>
     <!-- /Menu -->
 
+    <!-- Carousel -->
+    <div class="carousel-container">
+        <div id="carousel-productos" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-productos" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-productos" data-slide-to="1"></li>
+                <li data-target="#carousel-productos" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid" src="images/producto.jpg" alt="Primer producto">
+                    <div class="carousel-caption">
+                        <h4>Producto 1</h4>
+                        <p class="hidden-sm-down">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/producto.jpg" alt="Segundo producto">
+                    <div class="carousel-caption">
+                        <h3>Producto 2</h3>
+                        <p class="hidden-sm-down">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corrupti quam, voluptas.</p>
+                    </div>                
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block img-fluid" src="images/producto.jpg" alt="Tercer producto">
+                    <div class="carousel-caption">
+                        <h3>Producto 3</h3>
+                        <p class="hidden-sm-down">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat corrupti quam, voluptas.</p>
+                    </div>                
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel-productos" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Anterior</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-productos" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Siguiente</span>
+            </a>
+        </div>        
+    </div>    
+    <!-- /Carousel -->
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
