se agrego la seccion info

--- a/index.html
+++ b/index.html
@@ -138,6 +138,26 @@
     </div>    
     <!-- /Carousel -->
 
+    <!-- Info -->
+    <div id="info-container">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12 col-md-4">
+                    <img src="images/calidad.png" alt="Calidad" class="img-fluid">
+                    <h4>Calidad</h4>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="images/envio.png" alt="Envío" class="img-fluid">
+                    <h4>Envío gratis</h4>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="images/soporte.png" alt="Soporte" class="img-fluid">
+                    <h4>Soporte las 24hrs</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Info-->
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
