--- a/index.html
+++ b/index.html
@@ -158,9 +158,40 @@
         </div>
     </div>
     <!-- /Info-->
+
+    <!-- Footer -->
+    <footer id="footer-container">
+        <div class="container">
+            <div class="row text-center text-md-left">
+                <div class="col-md-4" style="border: 1px solid red">
+                    <form action="" id="suscribeForm" method="POST">
+                        <h4 class="text-uppercase">¿Quieres recibir todas las novedades?</h4>
+                        <div class="form-group">
+                            <input type="email" id="email" class="form-control" placeholder="tu@correo.com">
+                            <small class="form-text text-muted">No compartiremos tu información con nadie más</small>
+                            <button type="submit" class="btn btn-primary form-text">Suscribirme</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-3 offset-md-5" style="border: 1px solid red">
+                    <h4>Navegación</h4>
+                    <ul class="nav flex-column">
+                        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Catálogo</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Carritoo</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- /Footer -->
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
