--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         <div class="col-10 offset-1 col-sm-6 offset-sm-3 col-md-4 offset-md-0">
                             <ul class="navbar-nav">
                                 <li class="nav-item text-center">
-                                    <a href="#" class="nav-link active">Home</a>
+                                    <a href="index.html" class="nav-link active">Home</a>
                                 </li>
                                 <li class="nav-item text-center">
-                                    <a href="#" class="nav-link">Catálogo</a>
+                                    <a href="oferta.html" class="nav-link">Catálogo</a>
                                 </li>
                                 <li class="nav-item text-center">
                                     <a href="#" class="nav-link">Carrito</a>
@@ -163,7 +163,7 @@
     <footer id="footer-container">
         <div class="container">
             <div class="row text-center text-md-left">
-                <div class="col-md-4" style="border: 1px solid red">
+                <div class="col-md-4">
                     <form action="" id="suscribeForm" method="POST">
                         <h4 class="text-uppercase">¿Quieres recibir todas las novedades?</h4>
                         <div class="form-group">
@@ -173,11 +173,11 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-3 offset-md-5" style="border: 1px solid red">
+                <div class="col-md-3 offset-md-5">
                     <h4>Navegación</h4>
                     <ul class="nav flex-column">
-                        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Catálogo</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="oferta.html" class="nav-link">Catálogo</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Carritoo</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
