--- a/oferta.html
+++ b/oferta.html
@@ -110,6 +110,93 @@
     </section>
     <!-- /Breadcrumbs -->
 
+    <!--Productos -->
+    <section id="productos-container">
+        <div class="container">
+            <div class="row">
+                <!-- Filtros -->
+                <div class="col-12 col-md-3">
+                    <div class="list-group filtros-toggle hidden-sm-up">
+                        <a href="#" id="filtrosToggle" class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#filtros-container">
+                            <h5 class="list-group-item-heading">
+                                Filtros
+                                <i class="fa fa-chevron-down pull-right"></i>
+                            </h5>
+                        </a>
+                    </div>
+                    <div id="filtros-container" class="navbar-collapse collapse">
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action active">
+                                <h5 class="mb-1">Categoria</h5>
+                            </a>
+                            <a href="" class="list-group-item list-group-item-action justify-content-between">
+                                Ropa
+                                <span class="badge badge-pill badge-default">174</span>
+                            </a>
+                            <a href="" class="list-group-item list-group-item-action justify-content-between">
+                                Tecnologia
+                                <span class="badge badge-pill badge-default">100</span>
+                            </a> 
+                            <a href="" class="list-group-item list-group-item-action justify-content-between">
+                                Accesorios
+                                <span class="badge badge-pill badge-default">120</span>
+                            </a>                        
+                        </div>
+                        <div class="list-group">
+                            <a href="" class="list-group-item list-group-item-action active">
+                                <h5 class="mb-1">Color</h5>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-success justify-content-between">
+                                Verde
+                                <span class="badge badge-pill badge-default">1</span>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-info justify-content-between">
+                                Azul
+                                <span class="badge badge-pill badge-default">2</span>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-danger justify-content-between">
+                                Rojo
+                                <span class="badge badge-pill badge-default">3</span>
+                            </a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-warning justify-content-between">
+                                Amarillo
+                                <span class="badge badge-pill badge-default">4</span>
+                            </a>
+                        </div>
+                        <div class="list-group">
+                            <a href="" class="list-group-item list-group-item-action active">
+                                <h5 class="mb-1">Sexo</h5>
+                            </a>
+                            <a href="" class="list-group-item list-group-item-action justify-content-between">
+                                <label for="masculino" class="custom-control custom-checkbox">
+                                    <input type="checkbox" name="masculino" id="masculino" class="custom-control-input">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description">Masculino</span>
+                                </label>
+                                <span class="badge badge-pill badge-default">1</span>
+                            </a>
+                            <a href="" class="list-group-item list-group-item-action justify-content-between">
+                                <label for="femenino" class="custom-control custom-checkbox">
+                                    <input type="checkbox" name="femenino" id="femenino" class="custom-control-input">
+                                    <span class="custom-control-indicator"></span>
+                                    <span class="custom-control-description">Femenino</span>
+                                </label>
+                                <span class="badge badge-pill badge-default">2</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- /Filtros -->
+
+                <!-- Producto -->
+                <div class="col-12 col-md-9">
+                    Productos
+                </div>
+                <!-- /Producto -->
+            </div>
+        </div>
+    </section>
+    <!-- /Productos -->
     <!-- Modal -->
     <div class="modal fade" id="modal-oferta">
         <div class="modal-dialog">
