--- a/oferta.html
+++ b/oferta.html
@@ -190,7 +190,83 @@
 
                 <!-- Producto -->
                 <div class="col-12 col-md-9">
-                    Productos
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4 card-producto">
+                            <div class="card">
+                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Producto 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-6 col-lg-4 card-producto">
+                            <div class="card">
+                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Producto 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                </div>
+                            </div>
+                        </div> 
+
+                        <div class="col-12 col-md-6 col-lg-4 card-producto">
+                            <div class="card">
+                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Producto 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                </div>
+                            </div>
+                        </div> 
+
+                        <div class="col-12 col-md-6 col-lg-4 card-producto">
+                            <div class="card">
+                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Producto 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                </div>
+                            </div>
+                        </div> 
+
+                        <div class="col-12 col-md-6 col-lg-4 card-producto">
+                            <div class="card">
+                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Producto 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                </div>
+                            </div>
+                        </div> 
+
+
+                        <div class="col-12 col-md-6 col-lg-4 card-producto">
+                            <div class="card">
+                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
+                                <div class="card-block">
+                                    <h4 class="card-title">Producto 1</h4>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>
+
+                    <div class="row">
+                        <div id="paginator-container" class="col-12 d-flex justify-content-center">
+                            <nav>
+                                <ul class="pagination">
+                                    <li class="page-item disabled"><a href="#" class="page-link">&laquo;</a></li>
+                                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                                    <li class="page-item"><a href="#" class="page-link">2</a></li>
+                                    <li class="page-item"><a href="#" class="page-link">3</a></li>
+                                    <li class="page-item"><a href="#" class="page-link">4</a></li>
+                                    <li class="page-item"><a href="#" class="page-link">&raquo;</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
                 <!-- /Producto -->
             </div>
