se incluyo el estilo para el input de busqueda

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="col-12 col-md-6 offset-md-2">
                             <form action="" class="form-inline d-inline w-100 hidden-sm-down">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="¿Encontraste lo que buscabas?">
+                                    <input type="text" class="form-control search-icon" placeholder="¿Encontraste lo que buscabas?">
                                     <span class="input-group-btn">
                                         <button class="btn btn-platzi" type="button">
                                             <!-- la clase hidden-sm-down lo oculta desde small hasta extra small  -->
@@ -79,7 +79,7 @@
                     <form action="">
                         <div class="input-group">
                             <form action="" class="form-inline">
-                                <input type="text" class="form-control" placeholder="¿Encontraste lo que buscabas?">
+                                <input type="text" class="form-control search-icon" placeholder="¿Encontraste lo que buscabas?">
                                 <span class="input-group-btn">
                                     <button class="btn btn-platzi" type="button">
                                         <!-- la clase hidden-md-up lo oculta desde tamaño mediano hasta extra largo -->
