se modifico la estructura del catalogo de productos

--- a/oferta.html
+++ b/oferta.html
@@ -193,50 +193,96 @@
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
-                                <div class="card-block">
-                                    <h4 class="card-title">Producto 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                <img src="images/producto1.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <div class="card-block text-center">
+                                    <div class="rounded">
+                                        <span class="badge badge-default">¡Oferta!</span>
+                                    </div>
+                                    <h4 class="card-title">
+                                        <small><del>29.99$</del></small>&nbsp;14.99$
+                                    </h4>
+                                    <p class="card-text text-uppercase">Chemise</p>
+                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                        <i class="fa fa-plus"></i>
+                                        Ver mas
+                                    </a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
-                                <div class="card-block">
-                                    <h4 class="card-title">Producto 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                <img src="images/producto2.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <div class="card-block text-center">
+                                    <div class="rounded">
+                                        <span class="badge badge-default">¡Oferta!</span>
+                                    </div>
+                                    <h4 class="card-title">
+                                        <small><del>19.99$</del></small>&nbsp;9.99$
+                                    </h4>
+                                    <p class="card-text text-uppercase">Chemise</p>
+                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                        <i class="fa fa-plus"></i>
+                                        Ver mas
+                                    </a>
                                 </div>
                             </div>
                         </div> 
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
-                                <div class="card-block">
-                                    <h4 class="card-title">Producto 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                <img src="images/producto7.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <div class="card-block text-center">
+                                    <div class="rounded">
+                                        <span class="badge badge-default">¡Oferta!</span>
+                                    </div>
+                                    <h4 class="card-title">
+                                        <small><del>15.99$</del></small>&nbsp;7.99$
+                                    </h4>
+                                    <p class="card-text text-uppercase">Chaquetas</p>
+                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                        <i class="fa fa-plus"></i>
+                                        Ver mas
+                                    </a>
                                 </div>
                             </div>
                         </div> 
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
-                                <div class="card-block">
-                                    <h4 class="card-title">Producto 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                <img src="images/producto4.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <div class="card-block text-center">
+                                    <div class="rounded">
+                                        <span class="badge badge-default">¡Oferta!</span>
+                                    </div>
+                                    <h4 class="card-title">
+                                        <small><del>16.99$</del></small>&nbsp;5.99$
+                                    </h4>
+                                    <p class="card-text text-uppercase">pantalones</p>
+                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                        <i class="fa fa-plus"></i>
+                                        Ver mas
+                                    </a>
                                 </div>
                             </div>
                         </div> 
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
-                                <div class="card-block">
-                                    <h4 class="card-title">Producto 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                <img src="images/producto5.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <div class="card-block text-center">
+                                    <div class="rounded">
+                                        <span id="novedad" class="badge badge-default">¡Novedad!</span>
+                                        <span class="badge badge-default">¡Oferta!</span>
+                                    </div>
+                                    <h4 class="card-title">
+                                        <small><del>40.99$</del></small>&nbsp;20.99$
+                                    </h4>
+                                    <p class="card-text text-uppercase">chaquetas</p>
+                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                        <i class="fa fa-plus"></i>
+                                        Ver mas
+                                    </a>
                                 </div>
                             </div>
                         </div> 
@@ -244,10 +290,19 @@
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto.svg" alt="Produto 1" class="card-img-top" class="card-img-top img-fluid">
-                                <div class="card-block">
-                                    <h4 class="card-title">Producto 1</h4>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi assumenda tenetur sit.</p>
+                                <img src="images/producto6.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <div class="card-block text-center">
+                                    <div class="rounded">
+                                        <span class="badge badge-default">¡Oferta!</span>
+                                    </div>
+                                    <h4 class="card-title">
+                                        <small><del>12.99$</del></small>&nbsp;5.99$
+                                    </h4>
+                                    <p class="card-text text-uppercase">Franelas</p>
+                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                        <i class="fa fa-plus"></i>
+                                        Ver mas
+                                    </a>
                                 </div>
                             </div>
                         </div>                         
