se cambio el nombre del enlace a la pagina del producto 1

--- a/oferta.html
+++ b/oferta.html
@@ -202,7 +202,7 @@
                                         <small><del>29.99$</del></small>&nbsp;14.99$
                                     </h4>
                                     <p class="card-text text-uppercase">Chemise</p>
-                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                    <a href="producto1.html" class="btn btn-platzi btn-block btn-lg">
                                         <i class="fa fa-plus"></i>
                                         Ver mas
                                     </a>
