se adapto a responsive

--- a/producto1.html
+++ b/producto1.html
@@ -116,18 +116,18 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <h1 class="text-uppercase">chemise</h1>
-                    <img src="images/producto1.jpg" alt="Producto 1">
+                    <img src="images/producto1.jpg" alt="Producto 1" class="img-fluid">
                 </div>
 
                 <div class="col-12 col-md-6">
                     <hr>
-                    <p>Plazo de Envió <strong>En stock</storng></p>
+                    <p>Plazo de Envió:&nbsp;<strong>En stock</storng></p>
                     <h5><del>29.99$</del></h5>
                     <span id="precio-iva" class="badge badge-default">14.99$&nbsp;<small class="font-italic">IVA&nbsp;incluido</small></span>
                     <hr>
                     <form action="">
                         <div class="form-group row">
-                            <label for="size" class="col-12 col-md-4 text-right">Tamaño / Talla</label>
+                            <label for="size" class="col-12 col-md-4 text-md-right text-left">Tamaño / Talla</label>
                             <select name="size" id="size" class="form-control col-12 col-md-8">
                                 <option value="s">S</option>
                                 <option value="m">M</option>
@@ -136,7 +136,7 @@
                             </select>
                         </div>
                         <div class="form-group row">
-                            <label for="color" class="col-12 col-md-4 text-right">Color</label>
+                            <label for="color" class="col-12 col-md-4 text-md-right text-left">Color</label>
                             <select name="color" id="color" class="form-control col-12 col-md-8">
                                 <option value="">Amarillo</option>
                                 <option value="">Azul</option>
@@ -144,10 +144,10 @@
                             </select>
                         </div>
                         <div class="form-group row">
-                            <a id="plus" href="" class="col-12 col-md-1"><i class="fa fa-plus"></i></a>
-                            <input type="text" name="contidad" id="cantidad" class="form-control col-12 col-md-2 text-center" value="0">
-                            <a id="minus" href="" class="col-12 col-md-1"><i class="fa fa-minus"></i></a>
-                            <a href="#" class="btn btn-platzi btn-block col-12 col-md-4">
+                            <a id="plus" href="" class="col-1 offset-3 col-md-1"><i class="fa fa-plus"></i></a>
+                            <input type="text" name="contidad" id="cantidad" class="form-control col-4 col-md-2 text-center" value="0">
+                            <a id="minus" href="" class="col-1 col-md-1"><i class="fa fa-minus"></i></a>
+                            <a href="#" class="btn btn-platzi btn-block col-12 col-md-5">
                                 <i class="fa fa-shopping-cart"></i>
                                 Añadir al carrito
                             </a>
