se añadio id al boton para controlar el margin top en tamaños small

--- a/producto1.html
+++ b/producto1.html
@@ -147,7 +147,7 @@
                             <a id="plus" href="" class="col-1 offset-3 col-md-1"><i class="fa fa-plus"></i></a>
                             <input type="text" name="contidad" id="cantidad" class="form-control col-4 col-md-2 text-center" value="0">
                             <a id="minus" href="" class="col-1 col-md-1"><i class="fa fa-minus"></i></a>
-                            <a href="#" class="btn btn-platzi btn-block col-12 col-md-5">
+                            <a id="addCar" href="#" class="btn btn-platzi btn-block col-12 col-md-5">
                                 <i class="fa fa-shopping-cart"></i>
                                 Añadir al carrito
                             </a>
