--- a/producto1.html
+++ b/producto1.html
@@ -44,10 +44,10 @@
                                     <a href="index.html" class="nav-link">Home</a>
                                 </li>
                                 <li class="nav-item text-center">
-                                    <a href="oferta.html" class="nav-link active">Catálogo</a>
+                                    <a href="oferta.html" class="nav-link">Catálogo</a>
                                 </li>
                                 <li class="nav-item text-center">
-                                    <a href="#" class="nav-link">Carrito</a>
+                                    <a href="#" class="nav-link active">Carrito</a>
                                 </li>
                                 <li class="nav-item text-center hidden-sm-up">
                                     <a href="#" class="nav-link">Login</a>
@@ -149,7 +149,7 @@
                             <a id="minus" href="" class="col-1 col-md-1"><i class="fa fa-minus"></i></a>
                             <a id="addCar" href="#" class="btn btn-platzi btn-block col-12 col-md-5">
                                 <i class="fa fa-shopping-cart"></i>
-                                Añadir al carrito
+                                Añadir
                             </a>
                         </div>
                         <div class="form-group row">
@@ -176,8 +176,28 @@
             </div>
 
             <div class="row">
-                <div class="col-12 col-md-6">
-
+                <div class="col-12 col-md-6 hidden-sm-down">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner text-center" role="listbox">
+                            <div class="carousel-item active">
+                                <img class="d-block img-fluid" src="images/producto197x97.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="images/producto197x97.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block img-fluid" src="images/producto197x97.jpg" alt="Third slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6">
