se eliminaron clases innecesarias

--- a/oferta.html
+++ b/oferta.html
@@ -193,7 +193,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto1.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <img src="images/producto1.jpg" alt="Produto 1" class="card-img-top img-fluid">
                                 <div class="card-block text-center">
                                     <div class="rounded">
                                         <span class="badge badge-default">¡Oferta!</span>
@@ -212,7 +212,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto2.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <img src="images/producto2.jpg" alt="Produto 1" class="card-img-top img-fluid">
                                 <div class="card-block text-center">
                                     <div class="rounded">
                                         <span class="badge badge-default">¡Oferta!</span>
@@ -231,7 +231,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto7.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <img src="images/producto7.jpg" alt="Produto 1" class="card-img-top img-fluid">
                                 <div class="card-block text-center">
                                     <div class="rounded">
                                         <span class="badge badge-default">¡Oferta!</span>
@@ -250,7 +250,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto4.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <img src="images/producto4.jpg" alt="Produto 1" class="card-img-top img-fluid">
                                 <div class="card-block text-center">
                                     <div class="rounded">
                                         <span class="badge badge-default">¡Oferta!</span>
@@ -269,7 +269,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto5.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <img src="images/producto5.jpg" alt="Produto 1" class="card-img-top img-fluid">
                                 <div class="card-block text-center">
                                     <div class="rounded">
                                         <span id="novedad" class="badge badge-default">¡Novedad!</span>
@@ -290,7 +290,7 @@
 
                         <div class="col-12 col-md-6 col-lg-4 card-producto">
                             <div class="card">
-                                <img src="images/producto6.jpg" alt="Produto 1" class="card-img-top img-fluid w-26 h25">
+                                <img src="images/producto6.jpg" alt="Produto 1" class="card-img-top img-fluid">
                                 <div class="card-block text-center">
                                     <div class="rounded">
                                         <span class="badge badge-default">¡Oferta!</span>
