--- a/oferta.html
+++ b/oferta.html
@@ -221,7 +221,7 @@
                                         <small><del>19.99$</del></small>&nbsp;9.99$
                                     </h4>
                                     <p class="card-text text-uppercase">Chemise</p>
-                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                    <a href="producto2.html" class="btn btn-platzi btn-block btn-lg">
                                         <i class="fa fa-plus"></i>
                                         Ver mas
                                     </a>
@@ -240,7 +240,7 @@
                                         <small><del>15.99$</del></small>&nbsp;7.99$
                                     </h4>
                                     <p class="card-text text-uppercase">Chaquetas</p>
-                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                    <a href="producto3.html" class="btn btn-platzi btn-block btn-lg">
                                         <i class="fa fa-plus"></i>
                                         Ver mas
                                     </a>
@@ -259,7 +259,7 @@
                                         <small><del>16.99$</del></small>&nbsp;5.99$
                                     </h4>
                                     <p class="card-text text-uppercase">pantalones</p>
-                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                    <a href="producto4.html" class="btn btn-platzi btn-block btn-lg">
                                         <i class="fa fa-plus"></i>
                                         Ver mas
                                     </a>
@@ -279,7 +279,7 @@
                                         <small><del>40.99$</del></small>&nbsp;20.99$
                                     </h4>
                                     <p class="card-text text-uppercase">chaquetas</p>
-                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                    <a href="producto5.html" class="btn btn-platzi btn-block btn-lg">
                                         <i class="fa fa-plus"></i>
                                         Ver mas
                                     </a>
@@ -299,7 +299,7 @@
                                         <small><del>12.99$</del></small>&nbsp;5.99$
                                     </h4>
                                     <p class="card-text text-uppercase">Franelas</p>
-                                    <a href="#" class="btn btn-platzi btn-block btn-lg">
+                                    <a href="producto6.html" class="btn btn-platzi btn-block btn-lg">
                                         <i class="fa fa-plus"></i>
                                         Ver mas
                                     </a>
