se modificaron los textos descriptivos del producto

--- a/producto4.html
+++ b/producto4.html
@@ -204,7 +204,7 @@
                     <hr>
                     <h3 class="roboto">Descripción:</h3>
                     <p class="roboto text-uppercase">
-                        Chemis de colores hecha en algodon de muy buena calidad, moda actual contemporanea
+                        pantalon levis para caballero versatil y ajustado moda casual y deportiva
                     </p>                    
                 </div>
             </div>
