--- a/producto6.html
+++ b/producto6.html
@@ -204,7 +204,7 @@
                     <hr>
                     <h3 class="roboto">Descripción:</h3>
                     <p class="roboto text-uppercase">
-                        Chemis de colores hecha en algodon de muy buena calidad, moda actual contemporanea
+                        franela deportivo anti transpirante con material de tela liviano ideal para hacer deportes u/o salir
                     </p>                    
                 </div>
             </div>
