--- a/producto2.html
+++ b/producto2.html
@@ -115,7 +115,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <h1 class="text-uppercase">chemise</h1>
+                    <h1 class="text-uppercase">camiseta</h1>
                     <img src="images/producto2.jpg" alt="Producto 2" class="img-fluid">
                 </div>
 
@@ -204,7 +204,7 @@
                     <hr>
                     <h3 class="roboto">Descripción:</h3>
                     <p class="roboto text-uppercase">
-                        Chemis de colores hecha en algodon de muy buena calidad, moda actual contemporanea
+                        camiseta deportiva con tela anti transpirante y material estresh ideal para hacer deportes o salir
                     </p>                    
                 </div>
             </div>
