--- a/producto3.html
+++ b/producto3.html
@@ -204,7 +204,7 @@
                     <hr>
                     <h3 class="roboto">Descripción:</h3>
                     <p class="roboto text-uppercase">
-                        Chemis de colores hecha en algodon de muy buena calidad, moda actual contemporanea
+                        chaqueta deportiva de cierre liviana con materiales frescos ideal para hacer deporte o salir
                     </p>                    
                 </div>
             </div>
