--- a/producto5.html
+++ b/producto5.html
@@ -204,7 +204,7 @@
                     <hr>
                     <h3 class="roboto">Descripción:</h3>
                     <p class="roboto text-uppercase">
-                        Chemis de colores hecha en algodon de muy buena calidad, moda actual contemporanea
+                        chaqueta deportiva Lacost de cierre entero ideal para climas frios
                     </p>                    
                 </div>
             </div>
